--- a/style.css
+++ b/style.css
@@ -8,4 +8,95 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    background: url('images/bg-intro-mobile.png');
+    background-color: hsl(0, 100%, 74%);
+    color: #fff;
+}
+
+.container {
+    width: 320px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+    box-shadow: 0 8px 0px rgba(62, 60, 73, 0.2);
+}
+
+.hero {
+    padding: 2.5em 0;
+    margin-top: 1em;
+    text-align: center;
+}
+
+h1 {
+    font-size: 1.8rem;
+    margin: 1em 0;
+}
+
+.try-it {
+    padding: 15px 50px;
+    background-color: hsl(248, 32%, 49%);
+    text-align: center;
+    border-radius: 10px;
+    margin: 1.5em 0;
+}
+
+.try-it span {
+    font-weight: bold;
+}
+
+.info {
+    padding: 25px;
+    margin: 1em 0;
+    background-color: #fff;
+    border-radius: 10px;
+    color: hsl(246, 25%, 77%);
+    text-align: center;
+}
+
+form input {
+    width: 100%;
+    padding: 15px;
+    margin: 0.5em auto;
+    border: 1px solid hsl(246, 25%, 77%);
+    border-radius: 5px;
+    font-size: 0.9rem;
+}
+
+input::placeholder {
+    font-weight: 600;
+    color: hsl(249, 10%, 50%);
+    font-size: 0.9rem;
+}
+
+input:focus {
+    outline: none;
+}
+
+.button {
+    background-color: hsl(154, 59%, 51%);
+    color: white;
+    padding: 15px;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-radius: 5px;
+    margin: .5em 0;
+    box-shadow: 0 4px 0 hsl(154, 59%, 45%);
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
+.disclamer {
+    font-size: .7rem;
+    padding: 0 1em;
+    margin-top: 1em;
+}
+
+.disclamer span {
+    font-weight: bold;
+    color: hsl(0, 100%, 74%);
 }
