--- a/style.css
+++ b/style.css
@@ -76,18 +76,27 @@ input:focus {
     outline: none;
 }
 
-.button {
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+button {
+    width: 100%;
     background-color: hsl(154, 59%, 51%);
     color: white;
     padding: 15px;
     text-transform: uppercase;
     font-weight: 500;
+    border: none;
     border-radius: 5px;
     margin: .5em 0;
     box-shadow: 0 4px 0 hsl(154, 59%, 45%);
 }
 
-.button:hover {
+button:hover {
     cursor: pointer;
 }
 
